<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Measurement Utility</string>
    <string name="app_name_temp">Temperature Conversion</string>
    <string name="app_name_length">Length Conversion</string>
    <string name="app_name_storage">Storage Conversion</string>
    <string name="app_name_area">Area Conversion</string>
    <string name="app_name_mass">Mass Conversion</string>
    <string name="app_name_speed">Speed Conversion</string>
    <string name="app_name_currency">Currency Conversion</string>
    <string name="app_name_grocery">Grocery Store</string>
    <string name="app_name_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Search</string>
    <string name="action_lsetting">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check For Update</string>
    <color name="myColor">#2B547E</color>
    <string name="convert">Convert</string>
    <string name="temperature">Temperature</string>
    <string name="speed">\u0020 Speed</string>
    <string name="celsius">Celsius °C</string>
    <string name="fahrenheit">Fahrenheit °F</string>
    <string name="kelvin">Kelvin °K</string>
    <string name="length">\u0020 Length</string>
    <string name="kilometer">Kilometer</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="millimeter">Millimeter</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="inch">Inch</string>
    <string name="nauticle_mile">Nautical Mile</string>
    <string name="ad_unit_id">A1532EBF7E91AFE</string>
    <string name="bit">Bit</string>
    <string name="byte1">Byte</string>
    <string name="kilobyte">Kilobyte</string>
    <string name="megabyte">MegaByte</string>
    <string name="gigabyte">Gigabyte</string>
    <string name="terabyte">TeraByte</string>
    <string name="petabyte">Petabyte</string>
    <string name="storage">\u0020 Storage</string>
    <string name="area">\u0020 Area</string>
    <string name="mass">\u0020 Mass</string>
    <string name="currency">\u0020 Currency</string>
    <string name="squarekm">Square_KM</string>
    <string name="hectare">Hectare</string>
    <string name="squaremeter">Square_Meter</string>
    <string name="squaremile">Square_Mile</string>
    <string name="acre">Acre</string>
    <string name="squareyard">Square_Yard</string>
    <string name="squarefoot">Square_Foot</string> 
    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>
    <string name="ounce">Ounce</string>
    <string name="meterspersec">Meters/sec</string>
    <string name="milesperhour">Miles/hour</string>
    <string name="feetpersec">Feet/sec</string>
    <string name="kmperhour">KM/hour</string>
    <string name="metricton">MetricTon</string>
    <string name="data_local">Local</string>
    <string name="data_internet">Internet</string>
    <string name="buttona">Calculate</string>
    <string name="desc">Description</string>
    <string name="From">From Currency</string>
    <string name="To">To Currency</string>
    <string name="download">Download</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="Update">Update</string>
    <string name="to">To</string>
    <string name="action_addVehicle">Add Vehicle</string>
    <string name="AddtoBill">Add To Bill</string>
    <color name="custom_theme_color">#2B547E</color>
    <string name="convert_trail">Convert \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 &gt;</string>

</resources>
