<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivityCurrency" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/data_local" />

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/data_internet" />
    </RadioGroup>

    <requestFocus />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText4"
        android:layout_marginBottom="59dp"
        android:ems="5"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#2B547E" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginBottom="67dp"
        android:ems="5"
        android:textColor="#2B547E" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_marginBottom="59dp"
        android:layout_marginTop="32dp"
        android:background="#00000000"
        android:ems="10"
        android:text="@string/To" >
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="59dp"
        android:layout_toLeftOf="@+id/spinner1"
        android:background="#00000000"
        android:ems="10"
        android:text="@string/From" />

    <Spinner
        android:id="@+id/spinner1"
        style="android:spinnerStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="40dp"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner2"
        style="android:spinnerStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinner1"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_marginLeft="20dp"
        android:text="@string/buttona" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginBottom="27dp"
        android:text="@string/download" />

</RelativeLayout>