<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivityGrocery" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/unit" />
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/editText1"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" >

     <requestFocus />
  </EditText>
  
    <EditText
        android:id="@+id/editText3"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/spinner1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/price" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/editText3"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/to" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/editText5"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />
    
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText4"
        android:layout_toRightOf="@+id/editText6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_marginTop="20dp"
        android:text="@string/convert" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignLeft="@+id/editText4"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

</RelativeLayout>